// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Button Component 1`] = `
<div
  class="sc-bdVaJa jpqvBK"
>
  <a
    class="sc-bwzfXH cFcRRy"
    href="/hello"
    type="link"
  >
    Hello
  </a>
</div>
`;

exports[`Regular Button Component 1`] = `
<div
  class="sc-bdVaJa jpqvBK"
>
  <button
    class="sc-htpNat iHNvzc"
    type="button"
  >
    Hello
  </button>
</div>
`;
